Added 'api' namespace; added 'simple token authentication' gem; added controllers, helpers, and views for api

--- a/app/views/goals/_goal.html.erb
+++ b/app/views/goals/_goal.html.erb
@@ -5,7 +5,7 @@
   </tr>
   <tr class="row">
     <td><%= link_to @goal.title, @goal %></td>
-    <td><%= link_to 'Edit', edit_goal_path if can? :update, @goal %></td>
+    <td><%= link_to 'Edit', edit_goal_path(@goal) if can? :update, @goal %></td>
     <td><%= link_to 'Delete', @goal, method: :delete, data: {confirm: 'Are you sure?'} if can? :destroy, @goal %></td>
     <td><%= link_to @goal.user.name, @goal.user %></td>
   </tr>
