--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for(@user, html: {class: 'form-horizontal'}) do |f| %>
+<%= form_for(@user, url: {action: action}, html: {class: 'form-horizontal'}) do |f| %>
     <% if @user.errors.any? %>
         <div id="error_explanation">
           <h2><%= pluralize(@user.errors.count, 'error') %> prohibited this goal from being saved:</h2>
@@ -18,7 +18,7 @@
     <div class="field form-group">
       <%= f.label :email, class: 'col-sm-2 control-label' %>
       <div class="col-sm-10">
-        <%= f.text_area :email, class: 'form-control' %>
+        <%= f.text_field :email, class: 'form-control' %>
       </div>
     </div>
     <% if user_signed_in? && current_user.admin? %>
