--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -7,17 +7,13 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="http://deeprog.com/">deeprog</a>
-      <%= link_to 'Home', user_signed_in? ? authenticated_root_path : root_path, class: 'navbar-brand' %>
-      <% if user_signed_in? %>
-          <%= link_to 'New Goal', new_goal_path, class: 'navbar-brand' %>
-      <% end %>
+      <a class="navbar-brand" href="/">deeprog</a>
+      <%= link_to 'Home', page_path('home'), class: 'navbar-brand' %>
+      <%= link_to 'New Goal', new_goal_path, class: 'navbar-brand' if user_signed_in? %>
       <%= link_to 'Goals', goals_path, class: 'navbar-brand' %>
-      <% if user_signed_in? && current_user.admin? %>
-          <%= link_to 'New User', new_user_path, class: 'navbar-brand' %>
-    <% end %>
+      <%= link_to 'New User', new_user_path, class: 'navbar-brand' if user_signed_in? && current_user.admin? %>
       <%= link_to 'Users', users_path, class: 'navbar-brand' %>
-      <%= link_to 'About', pages_about_path, class: 'navbar-brand' %>
+      <%= link_to 'About', page_path('about'), class: 'navbar-brand' %>
     </div>
     <ul class="nav navbar-nav navbar-right">
       <li class="dropdown">
