--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,6 +1,4 @@
-<% content_for :title do %>
-    About
-<% end %>
+<%= content_for :title, 'About' %>
 <h3>About the Website</h3>
 <p>
   This web application was created by
