--- a/app/views/layouts/_panel.html.erb
+++ b/app/views/layouts/_panel.html.erb
@@ -1,4 +1,7 @@
 <div class="panel panel-default">
   <div class="panel-heading"><%= title %></div>
   <%= yield %>
+  <% if resource.present? %>
+      <div class="panel-footer"><%= paginate resource %></div>
+  <% end %>
 </div>
