--- a/app/views/comments/edit.html.erb
+++ b/app/views/comments/edit.html.erb
@@ -1,3 +1,3 @@
-<%= render layout: 'layouts/panel', locals: {title: 'Editing Goal Comment'} do %>
+<%= render layout: 'layouts/panel', locals: {title: 'Editing Goal Comment', resource: nil} do %>
     <%= render 'comments/form' %>
 <% end %>
