--- a/app/views/comments/show.html.erb
+++ b/app/views/comments/show.html.erb
@@ -1,3 +1,3 @@
-<%= render layout: 'layouts/panel', locals: {title: 'Viewing Goal Comment'} do %>
+<%= render layout: 'layouts/panel', locals: {title: 'Viewing Goal Comment', resource: nil} do %>
     <%= render @comment %>
 <% end %>
