--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,4 +1,4 @@
-<%= render layout: 'layouts/panel', locals: {title: "Editing #{resource_name.to_s.humanize}"} do %>
+<%= render layout: 'layouts/panel', locals: {title: "Editing #{resource_name.to_s.humanize}", resource: nil} do %>
     <%= form_for(resource, as: resource_name, url: registration_path(resource_name),
                  html: {method: :put, role: 'form', class: 'form-horizontal'}) do |f| %>
         <%= devise_error_messages! %>
