--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,4 +1,4 @@
-<%= render layout: 'layouts/panel', locals: {title: 'Sign up'} do %>
+<%= render layout: 'layouts/panel', locals: {title: 'Sign up', resource: nil} do %>
     <%= form_for(resource, as: resource_name, url: registration_path(resource_name),
                  html: {role: 'form', class: 'form-horizontal'}) do |f| %>
         <%= devise_error_messages! %>
