--- a/app/views/goals/_goals.html.erb
+++ b/app/views/goals/_goals.html.erb
@@ -3,7 +3,7 @@
     <th colspan="3">Title:</th>
     <th>User:</th>
   </tr>
-  <% @goals.accessible_by(current_ability).each do |goal| %>
+  <% @goals.each do |goal| %>
       <tr class="row">
         <td><%= link_to goal.title, goal %></td>
         <td><%= link_to 'Edit', edit_goal_path(goal) if can? :update, goal %></td>
