--- a/app/views/goals/index.html.erb
+++ b/app/views/goals/index.html.erb
@@ -1,5 +1,5 @@
-<% if @goals.accessible_by(current_ability).present? %>
-    <%= render layout: 'layouts/panel', locals: {title: 'Viewing Goals'} do %>
+<% if @goals.present? %>
+    <%= render layout: 'layouts/panel', locals: {title: 'Viewing Goals', resource: @goals} do %>
         <%= render 'goals/goals' %>
     <% end %>
 <% end %>
