--- a/app/views/goals/new.html.erb
+++ b/app/views/goals/new.html.erb
@@ -1,3 +1,3 @@
-<%= render layout: 'layouts/panel', locals: {title: 'New Goal'} do %>
+<%= render layout: 'layouts/panel', locals: {title: 'New Goal', resource: nil} do %>
     <%= render 'goals/form' %>
 <% end %>
