--- a/app/views/tokens/show.html.erb
+++ b/app/views/tokens/show.html.erb
@@ -1,3 +1,3 @@
-<%= render layout: 'layouts/panel', locals: {title: 'Viewing User Token'} do %>
+<%= render layout: 'layouts/panel', locals: {title: 'Viewing User Token', resource: nil} do %>
     <%= render 'tokens/token' %>
 <% end %>
