--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,5 +1,5 @@
-<% if @users.accessible_by(current_ability).present? %>
-    <%= render layout: 'layouts/panel', locals: {title: 'Viewing Users'} do %>
+<% if @users %>
+    <%= render layout: 'layouts/panel', locals: {title: 'Viewing Users', resource: @users} do %>
         <%= render 'users/users' %>
     <% end %>
 <% end %>
