--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,18 +1,18 @@
-<%= render layout: 'layouts/panel', locals: {title: 'Viewing User'} do %>
+<%= render layout: 'layouts/panel', locals: {title: 'Viewing User', resource: nil} do %>
     <%= render @user %>
 <% end %>
 <% if @user.tokens.accessible_by(current_ability).present? %>
-    <%= render layout: 'layouts/panel', locals: {title: 'Viewing User Tokens'} do %>
+    <%= render layout: 'layouts/panel', locals: {title: 'Viewing User Tokens', resource: nil} do %>
         <%= render 'users/tokens' %>
     <% end %>
 <% end %>
 <% if @user.goals.accessible_by(current_ability).present? %>
-    <%= render layout: 'layouts/panel', locals: {title: 'Viewing User Goals'} do %>
+    <%= render layout: 'layouts/panel', locals: {title: 'Viewing User Goals', resource: nil} do %>
         <%= render 'users/goals' %>
     <% end %>
 <% end %>
 <% if @user.comments.accessible_by(current_ability).present? %>
-    <%= render layout: 'layouts/panel', locals: {title: 'Viewing User Comments'} do %>
+    <%= render layout: 'layouts/panel', locals: {title: 'Viewing User Comments', resource: nil} do %>
         <%= render 'users/comments' %>
     <% end %>
 <% end %>
