--- a/app/views/users/_user.html.erb
+++ b/app/views/users/_user.html.erb
@@ -1,11 +1,10 @@
 <table class="table">
   <tr class="row">
-    <th>Name:</th>
-    <th colspan="3">Email:</th>
-  </tr>
-  <tr class="row">
     <td><%= link_to @user.name, @user %></td>
-    <td><%= mail_to @user.email, @user.email %></td>
+    <td>
+      <% if user_signed_in? && (current_user.admin? || current_user == @user) %>
+          <%= mail_to @user.email, @user.email %>
+      <% end %></td>
     <td>
       <% if user_signed_in? && current_user.admin? %>
           <%= link_to 'Edit', edit_user_path(@user) %>
