--- a/app/views/users/_users.html.erb
+++ b/app/views/users/_users.html.erb
@@ -1,12 +1,11 @@
 <table class="table table-striped">
-  <tr class="row">
-    <th>Name:</th>
-    <th colspan="3">Email:</th>
-  </tr>
   <% @users.each do |user| %>
       <tr class="row">
         <td><%= link_to user.name, user %></td>
-        <td><%= mail_to user.email, user.email %></td>
+        <td>
+          <% if user_signed_in? && (current_user.admin? || current_user == @user) %>
+              <%= mail_to user.email, user.email %>
+          <% end %></td>
         <td>
           <% if user_signed_in? && current_user.admin? %>
               <%= link_to 'Edit', edit_user_path(user) %>
