--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,4 +1,4 @@
-<%= content_for :title, 'About' %>
+<%= content_for :title, 'Goalify: About' %>
 <h3>About the Website</h3>
 <p>
   This web application was created by
