--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,4 +1,4 @@
-<%= content_for :title, 'Home' %>
+<%= content_for :title, 'Goalify: Home' %>
 <h3>Welcome</h3>
 <p><%= link_to 'Users:', users_path %> <%= User.count %> registered</p>
 <p><%= link_to 'Goals', goals_path %> <%= Goal.count %> created</p>
