--- a/app/views/tokens/show.html.erb
+++ b/app/views/tokens/show.html.erb
@@ -1,3 +1,4 @@
+<%= content_for :title, 'Goalify: Show Token' %>
 <%= render layout: 'layouts/panel', locals: {title: 'Viewing User Token', resource: nil} do %>
     <%= render 'tokens/token' %>
 <% end %>
