--- a/app/views/comments/index.html.erb
+++ b/app/views/comments/index.html.erb
@@ -1,3 +1,4 @@
+<%= content_for :title, 'Goalify: All Comments' %>
 <% if @comments.present? %>
     <%= render layout: 'layouts/panel', locals: {title: 'Viewing Goal Comments', resource: @comments} do %>
         <%= render 'goals/comments' %>
