--- a/app/views/comments/show.html.erb
+++ b/app/views/comments/show.html.erb
@@ -1,3 +1,4 @@
+<%= content_for :title, 'Goalify: Show Comment' %>
 <%= render layout: 'layouts/panel', locals: {title: 'Viewing Goal Comment', resource: nil} do %>
     <%= render @comment %>
 <% end %>
