--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,7 +19,17 @@
   </div>
   <div class="row">
     <div class="col-xs-3">
-      <h3>Sidebar</h3>
+      <h3><%= link_to 'Home', page_path('home') %></h3>
+
+      <h3><%= link_to 'New Goal', new_goal_path if user_signed_in? %></h3>
+
+      <h3><%= link_to 'Goals', goals_path %></h3>
+
+      <h3><%= link_to 'New User', new_user_path if user_signed_in? && current_user.admin? %></h3>
+
+      <h3><%= link_to 'Users', users_path %></h3>
+
+      <h3><%= link_to 'About', page_path('about') %></h3>
     </div>
     <div class="col-xs-9">
       <%= render 'layouts/tabs' %>
