--- a/app/views/kaminari/_paginator.html.erb
+++ b/app/views/kaminari/_paginator.html.erb
@@ -8,13 +8,13 @@
 -%>
 <%= paginator.render do -%>
     <nav>
-      <ul class="pagination">
+      <ul class="pagination pagination-sm">
         <% unless current_page.first? %>
             <li><%= first_page_tag %></li>
         <% end %>
-        <% unless current_page.first? %>
-            <li><%= prev_page_tag %></li>
-        <% end %>
+        <%# unless current_page.first? %>
+        <!--<li><%#= prev_page_tag %></li>-->
+        <%# end %>
         <% each_page do |page| -%>
             <% if page.left_outer? || page.right_outer? || page.inside_window? -%>
                 <% if page == current_page %>
@@ -26,9 +26,9 @@
                 <li><%= gap_tag %></li>
             <% end -%>
         <% end -%>
-        <% unless current_page.last? %>
-            <li><%= next_page_tag %></li>
-        <% end %>
+        <%# unless current_page.last? %>
+        <!--<li><%#= next_page_tag %></li>-->
+        <%# end %>
         <% unless current_page.last? %>
             <li><%= last_page_tag %></li>
         <% end %>
