--- a/app/views/comments/_new.html.erb
+++ b/app/views/comments/_new.html.erb
@@ -1,13 +1,14 @@
+<%= errors_for @goal %>
 <%= form_for([@goal, @goal.comments.build], html: {class: 'form-horizontal'}) do |f| %>
-    <div class="field form-group">
+    <div class="form-group">
       <%= f.label :body, class: 'col-sm-2 control-label' %>
       <div class="col-sm-10">
-        <%= f.text_area :body, class: 'form-control' %>
+        <%= f.text_area :body, class: 'form-control', placeholder: 'Body' %>
       </div>
     </div>
-    <div class="actions form-group">
+    <div class="form-group">
       <div class="col-sm-offset-2 col-sm-10">
-        <%= f.submit %>
+        <%= f.submit class: 'btn btn-default' %>
       </div>
     </div>
 <% end %>
