--- a/app/views/goals/_form.html.erb
+++ b/app/views/goals/_form.html.erb
@@ -1,29 +1,20 @@
+<%= errors_for @goal %>
 <%= form_for(@goal, html: {class: 'form-horizontal'}) do |f| %>
-    <% if @goal.errors.any? %>
-        <div id="error_explanation">
-          <h2><%= pluralize(@goal.errors.count, 'error') %> prohibited this goal from being saved:</h2>
-          <ul>
-            <% @goal.errors.full_messages.each do |message| %>
-                <li><%= message %></li>
-            <% end %>
-          </ul>
-        </div>
-    <% end %>
-    <div class="field form-group">
+    <div class="form-group">
       <%= f.label :title, class: 'col-sm-2 control-label' %>
       <div class="col-sm-10">
-        <%= f.text_field :title, class: 'form-control' %>
+        <%= f.text_field :title, class: 'form-control', placeholder: 'Title' %>
       </div>
     </div>
-    <div class="field form-group">
+    <div class="form-group">
       <%= f.label :text, class: 'col-sm-2 control-label' %>
       <div class="col-sm-10">
-        <%= f.text_area :text, class: 'form-control' %>
+        <%= f.text_area :text, class: 'form-control', placeholder: 'Text' %>
       </div>
     </div>
-    <div class="actions form-group">
+    <div class="form-group">
       <div class="col-sm-offset-2 col-sm-10">
-        <%= f.submit %>
+        <%= f.submit class: 'btn btn-default' %>
       </div>
     </div>
 <% end %>
