--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -5,10 +5,23 @@
               aria-expanded="false">
         <span class="sr-only">Toggle navigation</span>
         <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="#">Goalify</a>
+      <%= link_to 'Goalify', page_path('home'), class: 'navbar-brand' %>
     </div>
     <div class="collapse navbar-collapse">
+      <ul class="nav navbar-nav">
+        <% if user_signed_in? %>
+            <li><%= link_to 'New Goal', new_goal_path %></li>
+        <% end %>
+        <li><%= link_to 'Goals', goals_path %></li>
+        <% if user_signed_in? && current_user.admin? %>
+            <li><%= link_to 'New User', new_user_path %></li>
+        <% end %>
+        <li><%= link_to 'Users', users_path %></li>
+        <li><%= link_to 'About', page_path('about') %></li>
+      </ul>
       <ul class="nav navbar-nav navbar-right">
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true"
