--- a/app/views/layouts/_panel.html.erb
+++ b/app/views/layouts/_panel.html.erb
@@ -1,5 +1,9 @@
 <div class="panel panel-default">
-  <div class="panel-heading"><%= title %></div>
+  <div class="panel-heading">
+    <h3 class="panel-title">
+      <%= title %>
+    </h3>
+  </div>
   <%= yield %>
   <% if resource.present? %>
       <div class="panel-footer"><%= paginate resource %></div>
