--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,6 +4,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title><%= content_for?(:title) ? yield(:title) : 'Goalify' %></title>
   <meta name="description" content="<%= content_for?(:description) ? yield(:description) : 'Goalify' %>">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= favicon_link_tag %>
@@ -11,7 +12,7 @@
 </head>
 <body>
 <%= render 'layouts/navigation' %>
-<div id="main-container" class="container">
+<div class="container">
   <div class="row">
     <div class="col-xs-12">
       <%= flash_messages %>
@@ -19,20 +20,9 @@
   </div>
   <div class="row">
     <div class="col-xs-3">
-      <h3><%= link_to 'Home', page_path('home') %></h3>
-
-      <h3><%= link_to 'New Goal', new_goal_path if user_signed_in? %></h3>
-
-      <h3><%= link_to 'Goals', goals_path %></h3>
-
-      <h3><%= link_to 'New User', new_user_path if user_signed_in? && current_user.admin? %></h3>
-
-      <h3><%= link_to 'Users', users_path %></h3>
-
-      <h3><%= link_to 'About', page_path('about') %></h3>
+      <%= render 'layouts/pills' %>
     </div>
     <div class="col-xs-9">
-      <%= render 'layouts/tabs' %>
       <%= yield %>
     </div>
   </div>
