--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -1,53 +1,42 @@
+<%= errors_for @user %>
 <%= form_for(@user, url: {action: action}, html: {class: 'form-horizontal'}) do |f| %>
-    <% if @user.errors.any? %>
-        <div id="error_explanation">
-          <h2><%= pluralize(@user.errors.count, 'error') %> prohibited this goal from being saved:</h2>
-          <ul>
-            <% @user.errors.full_messages.each do |message| %>
-                <li><%= message %></li>
-            <% end %>
-          </ul>
-        </div>
-    <% end %>
-    <div class="field form-group">
-      <%= f.label :name, class: 'col-sm-2 control-label' %>
-      <div class="col-sm-10">
-        <%= f.text_field :name, autofocus: true, class: 'form-control' %>
+    <div class="form-group">
+      <%= f.label :name, class: 'col-sm-4 control-label' %>
+      <div class="col-sm-8">
+        <%= f.text_field :name, autofocus: true, class: 'form-control', placeholder: 'Name' %>
       </div>
     </div>
-    <div class="field form-group">
-      <%= f.label :email, class: 'col-sm-2 control-label' %>
-      <div class="col-sm-10">
-        <%= f.text_field :email, class: 'form-control' %>
+    <div class="form-group">
+      <%= f.label :email, class: 'col-sm-4 control-label' %>
+      <div class="col-sm-8">
+        <%= f.text_field :email, class: 'form-control', placeholder: 'Email' %>
       </div>
     </div>
     <% if user_signed_in? && current_user.admin? %>
-        <div class="field form-group">
-          <%= f.label :role, class: 'col-sm-2 control-label' %>
-          <div class="col-sm-10">
-            <%= f.select(:role, User.roles.keys, {}) %>
+        <div class="form-group">
+          <%= f.label :role, class: 'col-sm-4 control-label' %>
+          <div class="col-sm-8">
+            <%= f.select(:role, User.roles.keys, {}, class: 'form-control') %>
           </div>
         </div>
     <% end %>
-    <% if current_page?(new_user_path) %>
-        <fieldset>
-          <div class="field form-group">
-            <%= f.label :password, class: 'col-sm-2 control-label' %>
-            <div class="col-sm-10">
-              <%= f.password_field :password, class: 'form-control' %>
-            </div>
-          </div>
-          <div class="field form-group">
-            <%= f.label :password_confirmation, class: 'col-sm-2 control-label' %>
-            <div class="col-sm-10">
-              <%= f.password_field :password_confirmation, class: 'form-control' %>
-            </div>
-          </div>
-        </fieldset>
-    <% end %>
-    <div class="actions form-group">
-      <div class="col-sm-offset-2 col-sm-10">
-        <%= f.submit class: 'button right' %>
+    <fieldset>
+      <div class="form-group">
+        <%= f.label :password, class: 'col-sm-4 control-label' %>
+        <div class="col-sm-8">
+          <%= f.password_field :password, class: 'form-control', placeholder: 'Password' %>
+        </div>
+      </div>
+      <div class="form-group">
+        <%= f.label :password_confirmation, class: 'col-sm-4 control-label' %>
+        <div class="col-sm-8">
+          <%= f.password_field :password_confirmation, class: 'form-control', placeholder: 'Password' %>
+        </div>
+      </div>
+    </fieldset>
+    <div class="form-group">
+      <div class="col-sm-offset-4 col-sm-8">
+        <%= f.submit class: 'btn btn-default' %>
       </div>
     </div>
 <% end %>
