--- a/app/views/users/_user.html.erb
+++ b/app/views/users/_user.html.erb
@@ -1,4 +1,11 @@
-<table class="table">
+<table class="table table-striped">
+  <tr class="row">
+    <th>Name:</th>
+    <th colspan="3">
+      <% if user_signed_in? && (current_user.admin? || current_user == @user) %>
+          Email:
+      <% end %></th>
+  </tr>
   <tr class="row">
     <td><%= link_to @user.name, @user %></td>
     <td>
@@ -22,8 +29,10 @@
   </tr>
   <tr class="row">
     <td colspan="4">
-      <% if user_signed_in? && current_user.admin? %>
+      <% if user_signed_in? && (current_user.admin? || current_user == @user) %>
           <p>Role: <%= @user.role %></p>
+
+          <p>Authentication Token: <%= @user.authentication_token %></p>
       <% end %>
 
       <p>Joined on: <%= @user.created_at.to_formatted_s(:short) %></p>
