--- a/app/views/users/_users.html.erb
+++ b/app/views/users/_users.html.erb
@@ -1,4 +1,11 @@
 <table class="table table-striped">
+  <tr class="row">
+    <th>Name:</th>
+    <th colspan="3">
+      <% if user_signed_in? && (current_user.admin? || current_user == @user) %>
+          Email:
+      <% end %></th>
+  </tr>
   <% @users.each do |user| %>
       <tr class="row">
         <td><%= link_to user.name, user %></td>
