--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,3 +1,4 @@
+<%= content_for :title, 'Goalify: New User' %>
 <% if can? :create, User %>
     <%= render layout: 'layouts/panel', locals: {title: 'New User', resource: nil} do %>
         <%= render partial: 'users/form', locals: {action: 'create'} %>
