--- a/app/views/goals/new.html.erb
+++ b/app/views/goals/new.html.erb
@@ -1,4 +1,4 @@
-<%= content_for :title, 'Goalify: New Goal' %>
+<%= content_for :title, 'Goalify > New Goal' %>
 <%= render layout: 'layouts/panel', locals: {title: 'New Goal', resource: nil} do %>
     <%= render 'goals/form' %>
 <% end %>
