--- a/app/views/goals/show.html.erb
+++ b/app/views/goals/show.html.erb
@@ -1,4 +1,4 @@
-<%= content_for :title, 'Goalify: Show Goal' %>
+<%= content_for :title, 'Goalify > Show Goal' %>
 <%= render layout: 'layouts/panel', locals: {title: 'Viewing Goal', resource: nil} do %>
     <%= render @goal %>
 <% end %>
