--- a/app/views/goals/edit.html.erb
+++ b/app/views/goals/edit.html.erb
@@ -1,4 +1,4 @@
-<%= content_for :title, 'Goalify: Edit Goal' %>
+<%= content_for :title, 'Goalify > Edit Goal' %>
 <%= render layout: 'layouts/panel', locals: {title: 'Editing Goal', resource: nil} do %>
     <%= render 'goals/form' %>
 <% end %>
