--- a/app/views/tokens/index.html.erb
+++ b/app/views/tokens/index.html.erb
@@ -1,4 +1,4 @@
-<%= content_for :title, 'Goalify: All Tokens' %>
+<%= content_for :title, 'Goalify > All Tokens' %>
 <% if @tokens.present? %>
     <%= render layout: 'layouts/panel', locals: {title: 'Viewing User Tokens', resource: nil} do %>
         <%= render 'users/tokens' %>
