--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,4 +1,4 @@
-<%= content_for :title, 'Goalify: Show User' %>
+<%= content_for :title, 'Goalify > Show User' %>
 <%= render layout: 'layouts/panel', locals: {title: 'Viewing User', resource: nil} do %>
     <%= render @user %>
 <% end %>
