--- a/app/views/layouts/_pills.html.erb
+++ b/app/views/layouts/_pills.html.erb
@@ -7,8 +7,8 @@
       <li class="active"><%= link_to 'Home', page_path('home') %></li>
   <% elsif current_page?(new_goal_path) %>
       <li class="active"><%= link_to 'New Goal', new_goal_path %></li>
-  <% elsif current_page?(new_user_path) %>
-      <li class="active"><%= link_to 'New User', new_user_path %></li>
+  <% elsif current_page?(new_admin_user_path) %>
+      <li class="active"><%= link_to 'New User', new_admin_user_path %></li>
   <% elsif current_page?(page_path('about')) %>
       <li class="active"><%= link_to 'About', page_path('about') %></li>
   <% elsif current_page?(new_user_session_path) ||
@@ -18,18 +18,26 @@
   <% elsif current_page?(new_user_registration_path) %>
       <li class="active"><%= link_to 'Sign up', new_user_registration_path %></li>
   <% elsif current_page?(edit_user_registration_path) %>
-      <%= render 'layouts/tabs/user' %>
+      <%= render 'layouts/pills/user' %>
   <% elsif params[:controller] == 'users/registrations' &&
           (params[:action] == 'edit' || params[:action] == 'update') %>
-      <%= render 'layouts/tabs/user' %>
+      <%= render 'layouts/pills/user' %>
   <% elsif params[:id] %>
-      <%= render 'layouts/tabs/goal' if @goal %>
-      <%= render 'layouts/tabs/user' if @user %>
-      <%= render 'layouts/tabs/comment' if @comment %>
-      <%= render 'layouts/tabs/token' if @token %>
+      <%= render 'layouts/pills/goal' if @goal %>
+      <%= render 'layouts/pills/user' if @user %>
+      <%= render 'layouts/pills/comment' if @comment %>
+      <%= render 'layouts/pills/token' if @token %>
+      <%= render 'layouts/pills/subscription' if @subscription %>
+      <%= render 'layouts/pills/score' if @score %>
   <% elsif params[:goal_id] %>
-      <%= render 'layouts/tabs/comments' if @goal.comments.accessible_by(current_ability).present? %>
+      <li><%= link_to 'All Goals', goals_path %></li>
+      <li><%= link_to 'View Goal', @goal %></li>
+      <%= render 'layouts/pills/comments' if @goal.comments.accessible_by(current_ability).present? %>
+      <%= render 'layouts/pills/subscriptions' if @goal.subscriptions.accessible_by(current_ability).present? %>
+      <%= render 'layouts/pills/scores' if @goal.scores.accessible_by(current_ability).present? %>
   <% elsif params[:user_id] %>
-      <%= render 'layouts/tabs/tokens' if @user.tokens.accessible_by(current_ability).present? %>
+      <li><%= link_to 'All Users', users_path %></li>
+      <li><%= link_to 'View User', @user %></li>
+      <%= render 'layouts/pills/tokens' if @user.tokens.accessible_by(current_ability).present? %>
   <% end %>
 </ul>
