--- a/app/views/comments/_comment.html.erb
+++ b/app/views/comments/_comment.html.erb
@@ -6,7 +6,8 @@
   <tr class="row">
     <td><%= @comment.body %></td>
     <td><%= link_to 'Edit', edit_comment_path(@comment) if can? :update, @comment %></td>
-    <td><%= link_to 'Delete', @comment, method: :delete, data: {confirm: 'Are you sure?'} if can? :destroy, @comment %></td>
+    <td><%= link_to 'Delete', @comment, method: :delete,
+                    data: {confirm: 'Are you sure?'} if can? :destroy, @comment %></td>
     <td><%= link_to @comment.user.name, @comment.user %></td>
   </tr>
 </table>
