--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -17,7 +17,7 @@
         <% end %>
         <li><%= link_to 'Goals', goals_path %></li>
         <% if user_signed_in? && current_user.admin? %>
-            <li><%= link_to 'New User', new_user_path %></li>
+            <li><%= link_to 'New User', new_admin_user_path %></li>
         <% end %>
         <li><%= link_to 'Users', users_path %></li>
         <li><%= link_to 'About', page_path('about') %></li>
