--- a/app/views/layouts/pills/_comment.html.erb
+++ b/app/views/layouts/pills/_comment.html.erb
@@ -14,5 +14,6 @@
     <% end %>
 <% end %>
 <% if can? :destroy, @comment %>
-    <li><%= link_to 'Delete Comment', @comment, method: :delete, data: {confirm: 'Are you sure?'} %></li>
+    <li><%= link_to 'Delete Comment', @comment, method: :delete,
+                    data: {confirm: 'Are you sure?'} %></li>
 <% end %>
