--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -14,6 +14,12 @@
     </div>
     <% if user_signed_in? && current_user.admin? %>
         <div class="form-group">
+          <%= f.label :status, class: 'col-sm-4 control-label' %>
+          <div class="col-sm-8">
+            <%= f.select(:status, User.statuses.keys, {}, class: 'form-control') %>
+          </div>
+        </div>
+        <div class="form-group">
           <%= f.label :role, class: 'col-sm-4 control-label' %>
           <div class="col-sm-8">
             <%= f.select(:role, User.roles.keys, {}, class: 'form-control') %>
