--- a/app/views/users/_goals.html.erb
+++ b/app/views/users/_goals.html.erb
@@ -1,14 +1,14 @@
 <table class="table table-striped">
   <tr class="row">
     <th colspan="3">Title:</th>
-    <th>User:</th>
+    <th>Score:</th>
   </tr>
   <% @user.goals.accessible_by(current_ability).each do |goal| %>
       <tr class="row">
         <td><%= link_to goal.title, goal %></td>
         <td><%= link_to 'Edit', edit_goal_path(goal) if can? :update, goal %></td>
         <td><%= link_to 'Delete', goal, method: :delete, data: {confirm: 'Are you sure?'} if can? :destroy, goal %></td>
-        <td><%= link_to goal.user.name, goal.user %></td>
+        <td><%= link_to Score.total_for_goal(goal), goal_scores_path(goal) %></td>
       </tr>
   <% end %>
 </table>
