--- a/app/views/users/_user.html.erb
+++ b/app/views/users/_user.html.erb
@@ -14,34 +14,51 @@
       <% end %></td>
     <td>
       <% if user_signed_in? && current_user.admin? %>
-          <%= link_to 'Edit', edit_user_path(@user) %>
+          <%= link_to 'Edit', edit_admin_user_path(@user) %>
       <% else %>
           <%= link_to 'Edit', edit_user_registration_path if can? :update, @user %>
       <% end %></td>
     <td>
       <% if user_signed_in? && current_user.admin? %>
-          <%= link_to 'Deactivate User', @user, method: :delete,
-                      data: {confirm: 'Are you sure?'} %>
+          <% if @user.active? %>
+              <%= link_to 'Deactivate User', @user, method: :delete,
+                          data: {confirm: 'Are you sure?'} %>
+          <% else %>
+              <%= link_to 'Activate User', admin_user_path(@user, user: {status: :active}), method: :put %>
+          <% end %>
       <% else %>
           <%= link_to 'Deactivate User', cancel_user_registration_path,
                       data: {confirm: 'Are you sure?'} if can? :destroy, @user %>
+
       <% end %></td>
   </tr>
   <tr class="row">
+    <td colspan="4">Score: <b><%= Score.total_for_user @user %></b></td>
+  </tr>
+  <tr class="row">
+    <td colspan="4">Status: <b><%= @user.status %></b></td>
+  </tr>
+  <tr class="row">
+    <td colspan="4">Role: <b><%= @user.role %></b></td>
+  </tr>
+  <% if user_signed_in? && (current_user.admin? || current_user == @user) %>
+      <tr class="row">
+        <td colspan="4">Authentication Token: <b><%= @user.authentication_token %></b></td>
+      </tr>
+  <% end %>
+  <tr class="row">
     <td colspan="4">
-      <% if user_signed_in? && (current_user.admin? || current_user == @user) %>
-          <p>Role: <%= @user.role %></p>
-
-          <p>Authentication Token: <%= @user.authentication_token %></p>
-      <% end %>
-
-      <p>Joined on: <%= @user.created_at.to_formatted_s(:short) %></p>
-
+      Joined on: <b><%= @user.created_at.to_formatted_s(:short) %></b></td>
+  </tr>
+  <tr class="row">
+    <td colspan="4">
       <% if @user.current_sign_in_at %>
-          <p>Last logged in on: <%= @user.current_sign_in_at.to_formatted_s(:short) %></p>
+          Last logged in on: <b><%= @user.current_sign_in_at.to_formatted_s(:short) %></b>
       <% else %>
-          <p>Never logged in.</p>
-      <% end %>
-      <p>No. times logged in: <%= @user.sign_in_count %></p></td>
+          Never logged in.
+      <% end %></td>
+  </tr>
+  <tr class="row">
+    <td colspan="4">No. times logged in: <b><%= @user.sign_in_count %></b></td>
   </tr>
 </table>
