--- a/app/views/scores/edit.html.erb
+++ b/app/views/scores/edit.html.erb
@@ -1,4 +1,4 @@
-<%= content_for :title, 'Goalify > Edit Score' %>
+<%= content_for :title, t('scores.title.edit') %>
 <%= render layout: 'layouts/panel', locals: {title: 'Editing Goal Score', resource: nil} do %>
     <%= render 'scores/form' %>
 <% end %>
