--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,5 +1,5 @@
 <%= devise_error_messages! %>
-<%= content_for :title, 'Goalify > Sign Up' %>
+<%= content_for :title, t('users.registration.title.new') %>
 <%= render layout: 'layouts/panel', locals: {title: 'Sign up', resource: nil} do %>
     <%= form_for(resource, as: resource_name, url: registration_path(resource_name),
                  html: {role: 'form', class: 'form-horizontal'}) do |f| %>
