--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title><%= content_for?(:title) ? yield(:title) : 'Goalify' %></title>
-  <meta name="description" content="<%= content_for?(:description) ? yield(:description) : 'Goalify' %>">
+  <title><%= content_for?(:title) ? yield(:title) : t('title') %></title>
+  <meta name="description" content="<%= content_for?(:description) ? yield(:description) : t('description') %>">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
