--- a/app/views/scores/show.html.erb
+++ b/app/views/scores/show.html.erb
@@ -1,4 +1,4 @@
-<%= content_for :title, 'Goalify > Show Score' %>
+<%= content_for :title, t('scores.title.show') %>
 <%= render layout: 'layouts/panel', locals: {title: 'Viewing Goal Score', resource: nil} do %>
     <%= render @score %>
 <% end %>
