--- a/app/views/subscriptions/show.html.erb
+++ b/app/views/subscriptions/show.html.erb
@@ -1,4 +1,4 @@
-<%= content_for :title, 'Goalify > Show Subscription' %>
+<%= content_for :title, t('subscriptions.title.show') %>
 <%= render layout: 'layouts/panel', locals: {title: 'Viewing Goal Subscription', resource: nil} do %>
     <%= render @subscription %>
 <% end %>
